@@ -148,16 +148,18 @@ text \<open>
   The @{tool_def document} tool prepares logic session documents, processing
   the sources as provided by the user and generated by Isabelle. Its usage is:
   @{verbatim [display]
-\<open>Usage: isabelle document [OPTIONS] [DIR]
+\<open>Usage: isabelle document [OPTIONS]
 
   Options are:
-    -c           cleanup -- be aggressive in removing old stuff
-    -n NAME      specify document name (default 'document')
-    -o FORMAT    specify output format: pdf (default), dvi
-    -t TAGS      specify tagged region markup
+    -c           aggressive cleanup of -d DIR content
+    -d DIR       document output directory (default "output/document")
+    -n NAME      document name (default "document")
+    -o FORMAT    document format: pdf (default), dvi
+    -t TAGS      markup for tagged regions
 
-  Prepare the theory session document in DIR (default 'document')
-  producing the specified output format.\<close>}
+  Prepare the theory session document in document directory, producing the
+  specified output format.
+\<close>}
 
   This tool is usually run automatically as part of the Isabelle build
   process, provided document preparation has been enabled via suitable
@@ -172,9 +174,13 @@ text \<open>
   document preparation!
 
   \<^medskip>
+  Option \<^verbatim>\<open>-d\<close> specifies an laternative document output directory. The default
+  is \<^verbatim>\<open>output/document\<close> (derived from the document name). Note that the result
+  will appear in the parent of this directory.
+
+  \<^medskip>
   The \<^verbatim>\<open>-n\<close> and \<^verbatim>\<open>-o\<close> option specify the final output file name and format,
-  the default is ``\<^verbatim>\<open>document.dvi\<close>''. Note that the result will appear in the
-  parent of the target \<^verbatim>\<open>DIR\<close>.
+  the default is ``\<^verbatim>\<open>document.pdf\<close>''.
 
   \<^medskip>
   The \<^verbatim>\<open>-t\<close> option tells {\LaTeX} how to interpret tagged Isabelle command
